--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  list-style: none;
 }
 body {
   font-family: 'Poppins', sans-serif;
@@ -18,4 +19,21 @@ body {
 }
 .web-sec {
   display: none;
+}
+.hav-reg {
+  width: 327px;
+  border-radius: 8px;
+  background-color: #242742;
+  padding: 18px 46px 14px 48px;
+  border: 0;
+  color: white;
+  font-size: 16px;
+  font-weight: 700;
+  line-height: 150%; /* 24px */
+  cursor: auto;
+}
+.hav-reg:hover {
+  background: linear-gradient(204deg, #FF6A3A 0%, #FF527B 100%);
+  box-shadow: 0px 16px 32px 0px rgba(255, 97, 85, 0.50);
+  cursor: url('/public/Pointer .svg'), auto; 
 }
